fix spacing btw topics

--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -3,8 +3,8 @@ div.topic-list {
   div.topic {
     margin-left: 0px;
     margin-right: 0px;
+    margin-top: 10px;
     padding: 15px;
-    margin-bottom: 10px;
     min-height: 100px;
     border-bottom: 1px solid #DFDFDF; /* gray */
     background-color: white;
